graficas patrones oscuros

--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -52,7 +52,7 @@
         </div>
         <!-- CATEGORÍAS -->        
         <h2>CATEGORÍAS</h2>
-        <!-- FILAS -->
+        <!-- FILA1 -->
         <div class="row container_doble" id="bock_click">
             <div class="col-5" id="bock_click">
                 <h3 class="titulo-manipulacion">MANIPULACIÓN <span class="triangulo"></span></h3>
@@ -71,11 +71,7 @@
                    que el botón Aceptar sea más llamativo o esté ubicado en una posición que
                     favorezca su selección accidental.
             </p>
-            <h3>Casos de estudio</h3>
-            <p>Loren ipsun dolor sit anet, consectetur adipisci elit, 
-                sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
-                Ut enin ad ninin venian, quis nostrun exercitationen.
-            </p>
+            <h3>CASO DE ESTUDIO</h3>
             <div class="container text-center " id="cuado_interactivo">
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
@@ -101,18 +97,24 @@
                 </div>
             </div>
         </div>
+                <!-- FILA2 -->
+                <div class="row container_doble" id="bock_click">
+                    <div class="col-5" id="bock_click">
+                        <h3 class="titulo-manipulacion">MANIPULACIÓN EMOCIONAL <span class="triangulo"></span></h3>
+                    </div>
+                    <div class="col-7">
+                        <p>Se dirige al usuario para que realice acciones no deseadas, 
+                            pero que son beneficiosas para la interfaz o servicio.</p>
+                    </div>
+                </div>
         <div class="contenido-oculto" id="contenido-emocional">
             <!-- Contenido oculto aquí -->
-            <h2>Manipulación Emocional</h2>
+            <h2>MANIPULACIÓN EMOCIONAL</h2>
             <p>Estos patrones buscan influir en la toma de decisiones evocando las emociones de los usuarios.
                  Se busca con ello motivar comportamientos y acciones beneficiosas mediante reacciones emotivas
                   y el desarrollo de vínculos emocionales con el servicio.
             </p>
-            <h3>Casos de estudio</h3>
-            <p>Loren ipsun dolor sit anet, consectetur adipisci elit, 
-                sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
-                Ut enin ad ninin venian, quis nostrun exercitationen.
-            </p>
+            <h3>CASO DE ESTUDIO</h3>
             <div class="container text-center " id="cuado_interactivo">
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
@@ -138,7 +140,240 @@
                 </div>
             </div>
         </div>
+
+                        <!-- FILA3 -->
+                        <div class="row container_doble" id="bock_click">
+                            <div class="col-5" id="bock_click">
+                                <h3 class="titulo-manipulacion">OSCURECIMIENTO DE PRIVACIDAD<span class="triangulo"></span></h3>
+                            </div>
+                            <div class="col-7">
+                                <p>Limitando la visibilidad y comprensión de datos personales, y ocultando detalles referentes 
+                                   a las políticas de privacidad y prácticas de los propietarios de la plataforma,
+                                   es como funciona este patrón.</p>
+                            </div>
+                        </div>
+                <div class="contenido-oculto" id="contenido-emocional">
+                    <!-- Contenido oculto aquí -->
+                    <h2>OSCURECIMIENTO DE PRIVACIDAD</h2>
+                    <p>La ejecución de está categoría de patrones limita la visibilidad,
+                       el acceso y la comprensión de la forma en que se recopilan los datos personales del usuario. 
+                       Se oculta información importante sobre las políticas de privacidad y se presenta poca transparencia 
+                       sobre los usos y prácticas que tienen los propietarios de la plataforma con la información otorgada por los usuarios.
+                    </p>
+                    <h3>CASO DE ESTUDIO</h3>
+                    <div class="container text-center " id="cuado_interactivo">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                            Launch static backdrop modal
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                ...
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Understood</button>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                
+                        <!-- FILA4 -->
+                        <div class="row container_doble" id="bock_click">
+                            <div class="col-5" id="bock_click">
+                                <h3 class="titulo-manipulacion">OCULTACIÓN DE INFORMACIÓN<span class="triangulo"></span></h3>
+                            </div>
+                            <div class="col-7">
+                                <p>A favor de quien diseña y para quien se diseña, 
+                                    se manifiestan patrones que dificultan el seguimiento o acceso, 
+                                    se trate de alguna tarea a concretar ó alguna información.</p>
+                            </div>
+                        </div>
+                <div class="contenido-oculto" id="contenido-emocional">
+                    <!-- Contenido oculto aquí -->
+                    <h2>OCULTACIÓN DE INFORMACIÓN</h2>
+                    <p>Este tipo de patrón consiste en la aplicación de estrategias para limitar, 
+                       ocultar o dificultar el acceso a información de utilidad para el usuario pero 
+                       que podría no convenir para la empresa que el usuario conozca esta información.
+                    </p>
+                    <h3>CASO DE ESTUDIO</h3>
+                    <div class="container text-center " id="cuado_interactivo">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                            Launch static backdrop modal
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                ...
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Understood</button>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                
+                        <!-- FILA5 -->
+                        <div class="row container_doble" id="bock_click">
+                            <div class="col-5" id="bock_click">
+                                <h3 class="titulo-manipulacion">SUSCRIPCIONES INVOLUNTARIAS<span class="triangulo"></span></h3>
+                            </div>
+                            <div class="col-7">
+                                <p>Aprovechándose de la poca transparencia dentro de las interfaces, 
+                                   surgen servicios que solicitan suscripciones, o que simplemente se 
+                                   dan procesos automáticos de vago conocimiento.</p>
+                            </div>
+                        </div>
+                <div class="contenido-oculto" id="contenido-emocional">
+                    <!-- Contenido oculto aquí -->
+                    <h2>SUSCRIPCIONES INVOLUNTARIAS</h2>
+                    <p>Este tipo de patrones se utilizan para la suscripción a servicios o productos mediante 
+                       procesos automáticos o de vago consentimiento, aprovechándose de la falta de transparencia
+                       al presentar información sobre la plataforma y servicio.
+                    </p>
+                    <h3>CASO DE ESTUDIO</h3>
+                    <div class="container text-center " id="cuado_interactivo">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                            Launch static backdrop modal
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                ...
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Understood</button>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                        <!-- FILA6 -->
+                        <div class="row container_doble" id="bock_click">
+                            <div class="col-5" id="bock_click">
+                                <h3 class="titulo-manipulacion">URGENCIAS FALSAS<span class="triangulo"></span></h3>
+                            </div>
+                            <div class="col-7">
+                                <p>Los usuarios son sometidos a tomar decisiones rápidas mediante a notificaciones 
+                                   de urgencias falsas impulsando a actuar de forma impulsiva y que a largo plazo 
+                                   provoque que el usuario se arrepienta.</p>
+                            </div>
+                        </div>
+                <div class="contenido-oculto" id="contenido-emocional">
+                    <!-- Contenido oculto aquí -->
+                    <h2>URGENCIAS FALSAS</h2>
+                    <p>Este tipo de patrón se utiliza para presionar al usuario a realizar una acción rápida y poco reflexiva
+                       mediante una sensación artificial de oportunidad limitada. Estos patrones fomentan al usuario a la toma
+                       compulsiva de decisiones dentro la interfaz a expensas de la realización de acciones informadas y conscientes
+                       en la página y a largo plazo al posible arrepentimiento de usar el servicio ofrecido.
+                    </p>
+                    <h3>CASO DE ESTUDIO</h3>
+                    <div class="container text-center " id="cuado_interactivo">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                            Launch static backdrop modal
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                ...
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Understood</button>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>                
+
+                        <!-- FILA7 -->
+                        <div class="row container_doble" id="bock_click">
+                            <div class="col-5" id="bock_click">
+                                <h3 class="titulo-manipulacion">ANUNCIOS DISFRAZADOS<span class="triangulo"></span></h3>
+                            </div>
+                            <div class="col-7">
+                                <p>Dentro de las interacciones de páginas, se presentan anuncios disfrazados 
+                                   como parte del contenido regular que confunden al usuario e incitan a que ejecute 
+                                   alguna acción de forma involuntaria.</p>
+                            </div>
+                        </div>
+                <div class="contenido-oculto" id="contenido-emocional">
+                    <!-- Contenido oculto aquí -->
+                    <h2>ANUNCIOS DISFRAZADOS</h2>
+                    <p>Son estrategias que tienen la intención de que los usuarios realicen acciones 
+                       involuntarias con anuncios camuflados como contenido normal o parte de la navegación. 
+                       Para ello la plataforma presenta un formato de anuncios fácil de confundir, donde se confunden
+                       y mezclan la apariencia de los anuncios con el contenido.
+                    </p>
+                    <h3>CASO DE ESTUDIO</h3>
+                    <div class="container text-center " id="cuado_interactivo">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                            Launch static backdrop modal
+                        </button>
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                ...
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Understood</button>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>  
+
     </main>
+
+
     <!-- footer  -->
     <div id="footer"></div>
 
