--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 
     <!-- footer  -->
     <div id="footer"></div>
+
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
@@ -192,5 +193,7 @@
     <script src="scripts.js" async defer></script>
     <!-- nav.js -->
     <script src="/nav/nav.js"></script>
+            <!-- footer.js -->
+            <script src="/footer/footer.js"></script>
 </body>
 </html>
