--- a/PAGINA_2/pages2/tiposdediseño.html
+++ b/PAGINA_2/pages2/tiposdediseño.html
@@ -53,6 +53,7 @@
             </div>
         </div>
         <div class="contenido-oculto" id="contenido-manipulacion">
+            <div class="cuadro">
             <!-- Contenido oculto aquí -->
             <h2>DISEÑO INDUSTRIAL</h2>
             <p>Desde electrodomésticos, muebles, maquinaria, etc. El diseño industrial se encarga de diseñar objetos
