--- a/PAGINA_2/investigacióndeusuario.html
+++ b/PAGINA_2/investigacióndeusuario.html
@@ -13,7 +13,7 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- styles.css -->
-    <link rel="stylesheet" href="/css/patrones.css">
+    <link rel="stylesheet" href="/css/investigacióndeusuario.css">
     <!-- nav.css -->
     <link rel="stylesheet" href="/nav/nav.css">
     <!-- footer.css -->
@@ -27,33 +27,42 @@
         <!-- cuadro principal -->
         <div class="container justify-content-between" id="container_principal"> 
             <div class="container-fluid" id="container_descripcion">
-                <h1>PATRONES</h1>
-                <p>Concepto aplicado por el arquitecto Cristopher Alexander para ser introducidos 
-                    principalmente en el área de desarrollo de softwares, sin embargo, en la actualidad 
-                    también abarca a otras disciplinas.
-                    Los patrones de diseño son elementos que complementan el estilo y estructura 
-                    de una interfaz que tienden a generar dinámicas de interacción más atrayentes y llamativas para el usuario.</p>
-                <p>La función principal de los patrones, al menos dentro del diseño UI, consiste en estandarizar elementos de interfaz 
-                    y ofrecer soluciones acertivas a los problemas comunes que se presentan dentro del diseño de una plataforma
-                    . Para su implementación hay que previamente delimitar tanto a la problemática recurrente de la plataforma y 
-                    comprobar la aplicabilidad del patrón en diferentes circunstancias que rodeen esta problemática en la relación 
-                    interfaz-usuario.
-                </p>
+                <h1>INVESTIGACIÓN DE USUARIO</h1>
+                <p>En el ámbito de la experiencia de usuario (UX), se desarrollan diversos procesos que contribuyen a los diseños finales 
+                    en este campo. La investigación de usuario, es un proceso de observación que implica análisis y estudios que, 
+                    por medio de estos, se conoce y comprende los comportamientos cruciales de los usuarios; 
+                    todo con el fin general de esta área, que se basa en entregar una experiencia gratificante al usuario.</p>
             </div>
             <div class="container-fluid" id="reactangulo">
-                <h2>EJEMPLOS</h2>
+                <h2>ETAPAS</h2>
+                <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
+                    Ut enin ad ninin venian, quis nostrun exercitationen.</p>
                 <div class="row justify-content-center">
                     <div class="cuadrado"></div>
                 </div>
             </div>
             
-            <div class="container-fluid" id="ventajas">
-                <h2>VENTAJAS DE UTILIZARLOS</h2>
+            <div class="container-fluid" id="reactangulo">
+                <h2>¿COMO CONOCER AL USUARIO?</h2>
+                <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
+                    Ut enin ad ninin venian, quis nostrun exercitationen.</p>
                 <div class="row justify-content-center">
                     <div class="cuadrado"></div>
                 </div>
-            </div> 
+            </div>
+
+            <div class="container-fluid" id="reactangulo">
+                <h2>¿COMO CONOCER AL USUARIO?</h2>
+                <p>Loren ipsun dolor sit anet, consectetur adipisci elit, sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
+                    Ut enin ad ninin venian, quis nostrun exercitationen.</p>
+                <div class="row justify-content-center">
+                    <div class="cuadrado"></div>
+                </div>
+            </div>
         </div>
+    </div>
+        
+
     </main>
     <!-- footer  -->
     <div id="footer"></div>
