--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -170,7 +170,10 @@
                                     (leer más).</p>
                             </div>
                         </div>
-                
+                    </div>     
+                </div> 
+            </div>
+        </div>   
         <!-- FILA 5 -->
         <div class="row container_tiple display-flex" id="bock_click5">
             <div class="col-3" id="bock_click">
@@ -258,6 +261,7 @@
     <script src="js/patronesoscuros.js" async defer></script>
     <!-- nav.js -->
     <script src="nav/nav.js"></script>
+
     <!-- footer.js -->
     <script src="footer/footer.js"></script>
 </body>
