--- a/tiposdediseño.html
+++ b/tiposdediseño.html
@@ -22,9 +22,9 @@
     <link rel="stylesheet" href="/footer/footer.css">
 </head>
 <body>
-        <!-- nav barra -->
-        <div id="nav"></div>
-        <main class="main">
+    <!-- nav barra -->
+    <div id="nav"></div>
+    <main class="main">
         <!-- cuadro principal -->
         <div class="rectangulopestaña"></div>
         <div class="container justify-content-between" id="container_principal"> 
@@ -42,9 +42,9 @@
             </div>
         <!-- CATEGORÍAS -->        
         <h2>ÁREAS</h2>
-        <!-- FILAS -->
-        <div class="row container_doble" id="bock_click">
-            <div class="col-5" id="bock_click">
+        <!-- FILA 1 -->
+        <div class="row container_doble" id="bock_click1">
+            <div class="col-5">
                 <h3 class="titulo-manipulacion">DISEÑO INDUSTRIAL<span class="triangulo"></span></h3>
             </div>
             <div class="col-7">
@@ -52,122 +52,71 @@
                     pero que son beneficiosas para la interfaz o servicio.</p>
             </div>
         </div>
-        <div class="contenido-oculto" id="contenido-manipulacion">
-            <div class="cuadro">
+        <div class="contenido-oculto row container_doble justify-content-between" id="contenido-1">
             <!-- Contenido oculto aquí -->
             <h2>DISEÑO INDUSTRIAL</h2>
-            <p>Desde electrodomésticos, muebles, maquinaria, etc. El diseño industrial se encarga de diseñar objetos
-               o productos funcionales donde su objetivo principal consiste en mejorar la calidad de vida y experiencia
-               a través de la innovación y satisfacción respecto a las necesidades específicas dentro de diversos contextos,
-               dando énfasis a lo seguro, accesible, inclusivo y amigable con el medio ambiente. Pueden colaborar con diferentes
-               profesionales para llevar a cabo el proceso de diseño, desde principio a fin.
-            </p>
-            <h3>ILUSTRACIÓN</h3>
-            <p>Loren ipsun dolor sit anet, consectetur adipisci elit, 
-                sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
-                Ut enin ad ninin venian, quis nostrun exercitationen.
-            </p>
-            <div class="container text-center " id="cuado_interactivo">
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                    Launch static backdrop modal
-                </button>
-                <!-- Modal -->
-                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                        ...
-                        </div>
-                        <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Understood</button>
-                        </div>
-                    </div>
-                    </div>
-                </div>
+            <div class="col-5">
+                <img src="/img/Diseno_Industrial.png" id="imagen_industrial">
+            </div>
+            <div class="col-7">
+                <p>Desde electrodomésticos, muebles, maquinaria, etc. El diseño industrial se encarga de diseñar objetos
+                    o productos funcionales donde su objetivo principal consiste en mejorar la calidad de vida y experiencia
+                    a través de la innovación y satisfacción respecto a las necesidades específicas dentro de diversos contextos,
+                    dando énfasis a lo seguro, accesible, inclusivo y amigable con el medio ambiente. Pueden colaborar con diferentes
+                    profesionales para llevar a cabo el proceso de diseño, desde principio a fin.
+                </p>
             </div>
         </div>
-        <div class="contenido-oculto" id="contenido-emocional">
-            <!-- Contenido oculto aquí -->
-            <h2>DISEÑO GRÁFICO</h2>
-            <p>Dentro de las ramas del diseño gráfico, nos podemos introducir en disciplinas creativas donde,
-               se combina la comunicación visual y el arte, de forma que ambos se complementan para transmitir
-               mensajes y conceptos al público a través de imágenes, texto y otros elementos gráficos que componen
-               un cuerpo o espacio que dispone el contenido a expresar. Los diseñadores gráficos se desenvuelven en 
-               el área editorial, de fotografía, ilustración, etc. y requieren de fundamentos principales como la teoría del color.
-            </p>
-            <h3>ILUSTRACIÓN</h3>
-            <p>Loren ipsun dolor sit anet, consectetur adipisci elit, 
-                sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
-                Ut enin ad ninin venian, quis nostrun exercitationen.
-            </p>
-            <div class="container text-center " id="cuado_interactivo">
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                    Launch static backdrop modal
-                </button>
-                <!-- Modal -->
-                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                        ...
-                        </div>
-                        <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Understood</button>
-                        </div>
-                    </div>
-                    </div>
-                </div>
+        <!-- FILA 2 -->
+        <div class="row container_doble" id="bock_click2">
+            <div class="col-5">
+                <h3 class="titulo-manipulacion">DISEÑO GRÁFICO<span class="triangulo"></span></h3>
+            </div>
+            <div class="col-7">
+                <p>Se dirige al usuario para que realice acciones no deseadas, 
+                    pero que son beneficiosas para la interfaz o servicio.</p>
             </div>
         </div>
-        <div class="contenido-oculto" id="contenido-emocional">
+            <div class="contenido-oculto row container_doble " id="contenido-2">
+                <!-- Contenido oculto aquí -->
+                <h2>DISEÑO GRÁFICO</h2>
+            <div class="col-5">
+                <img src="/img/Diseno_Grafico.png" id="imagen_grafico">
+            </div>
+            <div class="col-7">
+                <p>Dentro de las ramas del diseño gráfico, nos podemos introducir en disciplinas creativas donde,
+                    se combina la comunicación visual y el arte, de forma que ambos se complementan para transmitir
+                    mensajes y conceptos al público a través de imágenes, texto y otros elementos gráficos que componen
+                    un cuerpo o espacio que dispone el contenido a expresar. Los diseñadores gráficos se desenvuelven en 
+                    el área editorial, de fotografía, ilustración, etc. y requieren de fundamentos principales como la teoría del color.
+                </p>
+            </div>
+        </div>
+        
+        <!-- FILA 3 -->
+        <div class="row container_doble" id="bock_click3">
+            <div class="col-5">
+                <h3 class="titulo-manipulacion">DISEÑO DE INTERACCIÓN<span class="triangulo"></span></h3>
+            </div>
+            <div class="col-7">
+                <p>Enfocándose en la relación e interacción de usuario y producto,
+                     el diseño de interacción dispone experiencias digitales
+                      que se concentran en ser eficientes e intuitivas.</p>
+            </div>
+        </div>
+        <div class="contenido-oculto row container_doble" id="contenido-3">
             <!-- Contenido oculto aquí -->
             <h2>DISEÑO DE INTERACCIÓN</h2>
-            <p>El diseño de interacción se destaca por su enfoque en la relación entre usuario y servicio,
-               buscando generar experiencias digitales valiosas y gratificantes. Se prioriza la creación de interfaces 
-               intuitivas y eficientes para facilitar una navegación fluida y simple. Este tipo de diseño se observa 
-               principalmente en aplicaciones, páginas web y software, donde se emplean conceptos como casos de estudio 
-               o arquitectura de la información.
-            </p>
-            <h3>ILUSTRACIÓN</h3>
-            <p>Loren ipsun dolor sit anet, consectetur adipisci elit, 
-                sed eiusnod tenpor incidunt ut labore et dolore nagna aliqua. 
-                Ut enin ad ninin venian, quis nostrun exercitationen.
-            </p>
-            <div class="container text-center " id="cuado_interactivo">
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                    Launch static backdrop modal
-                </button>
-                <!-- Modal -->
-                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                        ...
-                        </div>
-                        <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Understood</button>
-                        </div>
-                    </div>
-                    </div>
-                </div>
+            <div class="col-5">
+                <img src="/img/Diseno_de_Interaccion.png" id="imagen_interaccion">
+            </div>
+            <div class="col-7">
+                <p>El diseño de interacción se destaca por su enfoque en la relación entre usuario y servicio,
+                    buscando generar experiencias digitales valiosas y gratificantes. Se prioriza la creación de interfaces 
+                    intuitivas y eficientes para facilitar una navegación fluida y simple. Este tipo de diseño se observa 
+                    principalmente en aplicaciones, páginas web y software, donde se emplean conceptos como casos de estudio 
+                    o arquitectura de la información.
+                 </p>
             </div>
         </div>
     </main>
@@ -180,11 +129,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <!-- js -->
-    <script src="js/patronesoscuros.js" async defer></script>
+    <script src="js/tiposdediseño.js" async defer></script>
     <!-- nav.js -->
     <script src="nav/nav.js"></script>
-    <!-- loader distraccion -->
-    <script src="loader/loader.js"></script>
     <!-- footer.js -->
     <script src="footer/footer.js"></script>
 </body>
