posición de patrones oscuros

--- a/patronesoscuros.html
+++ b/patronesoscuros.html
@@ -65,6 +65,7 @@
                         pero que son beneficiosas para la interfaz o servicio.</p>
             </div>
         </div>
+                <!-- Aqui va el temporizador o la pelota que va subiendo escalones -->
             <!-- Contenido oculto aquí -->
         <div class="contenido-oculto" id="contenido-manipulacion">
             <h2>MANIPULACIÓN</h2>
@@ -90,7 +91,7 @@
                 pero que son beneficiosas para la interfaz o servicio.</p>
             </div>
         </div>
-        
+                <!-- aqui va el botón de no tocar y la alerta de spam -->
         <!-- Contenido oculto aquí -->
         <div class="contenido-oculto" id="contenido-emocional">
             <h2>MANIPULACIÓN EMOCIONAL</h2>
@@ -117,6 +118,7 @@
                 es como funciona este patrón.</p>
             </div>
         </div>
+                <!-- botón de aceptar sea grande y el contenido textual pequeño y botón de no tocar que cambie al hacer click-->
         <!-- Contenido oculto aquí -->
         <div class="contenido-oculto" id="contenido-oscurecimiento">
             <h2>OSCURECIMIENTO DE PRIVACIDAD</h2>
@@ -145,6 +147,7 @@
                 se trate de alguna tarea a concretar ó alguna información.</p>
             </div>
         </div>
+                <!-- dar click al carrito o botón con información que despues sale leer más -->
         <!-- Contenido oculto aquí -->
         <div class="contenido-oculto" id="contenido-informacion">
             <h2>OCULTACIÓN DE INFORMACIÓN</h2>
@@ -186,6 +189,7 @@
                     dan procesos automáticos de vago conocimiento.</p>
             </div>
         </div>
+                <!-- botón de suscribirse o targeta de suscripción gratis-->
         <!-- Contenido oculto aquí -->
         <div class="contenido-oculto" id="contenido-suscripciones">
             <h2>SUSCRIPCIONES INVOLUNTARIAS</h2>
@@ -210,6 +214,7 @@
                     provoque que el usuario se arrepienta.</p>
             </div>
         </div>
+                <!--la compra se acaba o muchos botones de descarga-->
         <!-- Contenido oculto aquí -->  
         <div class="contenido-oculto" id="contenido-urgencias">
             
@@ -236,7 +241,7 @@
                     alguna acción de forma involuntaria.</p>
             </div>
         </div>
-
+        <!-- botón del area del diseño que te redireccione-->
         <!-- Contenido oculto aquí -->  
         <div class="contenido-oculto" id="contenido-disfrazados">
             <h2>ANUNCIOS DISFRAZADOS</h2>
